# attackbed

./: .gitignore  Jenkinsfile  Makefile  README.md  TODO.txt  requirements.txt
ansible/: .gitignore  README.md  activate  ansible.cfg  hosts  hosts.example  openstack.yml  requirements.yml
docs/images/: AECID-Testbed-Bootstrap-Raw.drawio  AECID-Testbed-DoorAccess.drawio  AECID-Testbed-LateralMovement.drawio  AECID-Testbed-Videoserver.drawio  AttackBed-Bootstrap.drawio  AttackBed-Client.drawio  AttackBed-Docker.drawio  AttackBed-Lanturtle.drawio  AttackBed-LateralMovement.drawio  AttackBed-Network.drawio  AttackBed-Videoserver.drawio
docs/source/: conf.py  index.rst
packer/adminpc/: README.md  default.json  default.json.example  source.pkr.hcl
packer/attacker/: default.json  default.json.example  source.pkr.hcl
packer/client/: README.md  default.json.example
packer/corpdns/: README.md  default.json  default.json.example
packer/docker/: README.md  default.json.example
packer/fileshare/: README.md  default.json.example
packer/firewall/: README.md  default.json  default.json.example  source.pkr.hcl  variables.pkr.hcl
packer/ghostsserver/: README.md  build.pkr.hcl  default.json.example  source.pkr.hcl
packer/kafka/: README.md  (+1 more)
scripts/: deploydocs.sh
scripts/testbedrun/: README.md  pyproject.toml
scripts/testbedrun/src/testbedrun/: __main__.py  instance_names.yml  vm_map.yaml
scripts/testbedrun/src/testbedrun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terragrunt/: fetch_network_uuid.sh  terragrunt.hcl
(+322 files in other folders)
